--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,76 @@
+#weather
+{
+    background-color: #e5e5e5;
+    
+}
+
+#show
+{
+    width: 80%;
+    margin: 30px auto;
+    background-color: bisque;
+    padding: 10px;
+    visibility: hidden;
+    border: 1px solid gray;
+    border-radius: 5px;
+}
+
+footer
+{
+ 
+    text-align: center;
+    font-size: 15px;
+    font-family: serif;
+    padding: 10px 0px 20px 0px;
+    background-color: #e9ecef;
+}
+
+footer span
+{
+ 
+    color: brown
+}
+
+table
+{
+    
+    margin: 10px auto;
+    text-align: center;
+}
+
+table thead tr th
+{
+    text-align: center;
+}
+
+#td0,#td1,#td2,#td3,#td5
+{
+    font-size: 15px;
+    color: darkslategray;
+    text-transform: capitalize;
+    padding: 10px 0px;
+    line-height: 45px;
+    
+}
+
+#td4
+{
+    font-size: 15px;
+    color: darkslategray;
+    text-transform: lowercase;
+    padding: 10px 0px;
+    line-height: 45px;
+}
+
+#td0
+{
+    padding-left: 0px;
+    padding-right: 0px;
+}
+
+a
+{
+    text-transform: uppercase;
+}
+
 
